2025-10-10T00:51:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18393157408 # 792
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-10
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 653 1047 / 668 1062
* notice: next accum: outdated-unq outdated-all / unq all: 654 1048 / 669 1063
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-25] / [2025-10-09]

2025-10-09T00:52:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18362119341 # 791
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-09
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 652 1046 / 667 1061
* notice: next accum: outdated-unq outdated-all / unq all: 653 1047 / 668 1062
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-24] / [2025-10-08]

2025-10-08T00:51:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18330339694 # 790
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-08
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 652 1046 / 666 1060
* notice: next accum: outdated-unq outdated-all / unq all: 652 1046 / 667 1061
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-10-07]

2025-10-07T00:51:49Z: