@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-10T00:51:47Z",
-  "count_outdated" : 1048,
-  "uniques_outdated" : 654,
-  "count" : 1063,
-  "uniques" : 669,
+  "timestamp" : "2025-10-11T00:48:49Z",
+  "count_outdated" : 1049,
+  "uniques_outdated" : 655,
+  "count" : 1064,
+  "uniques" : 670,
   "clones" : [
-    {
-      "timestamp": "2025-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-27T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-10-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
