@@ -1,3 +1,12 @@
+2025-10-11T00:48:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18421867298 # 793
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-11
+* notice: last 14d: unq all: 6 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 654 1048 / 669 1063
+* notice: next accum: outdated-unq outdated-all / unq all: 655 1049 / 670 1064
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-26] / [2025-10-10]
+
 2025-10-10T00:51:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18393157408 # 792
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-10
